GSS NEWS -- History of user-visible changes.                    -*- outline -*-
Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
See the end for copying conditions.

* Version 0.0.26 (unreleased)

** API and ABI modifications.
No changes since last version.

* Version 0.0.25 (released 2009-02-26)

** gss: Improve --help and --version output.

** doc: Change license on the manual to GFDLv1.3+.

** More compiler warnings enabled, and many warnings fixed.

** API and ABI modifications.
No changes since last version.

* Version 0.0.24 (released 2008-09-10)

** Fix non-portable use of brace expansion in makefiles.

** Update gnulib files.

** Fix some warnings and make distcheck build the software with -Werror.

** Translations files not stored directly in git to avoid merge conflicts.
This allows us to avoid use of --no-location which makes the
translation teams happier.

** API and ABI modifications.
No changes since last version.

* Version 0.0.23 (released 2007-12-19)

** Use gettext 0.17.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.0.22 (released 2007-06-29)

** GSS is now licensed under the GPL version 3 or later.

** GSS is now developed using Git instead of CVS.
A public git mirror is available from <http://repo.or.cz/w/gss.git>.

** API and ABI modifications.
No changes since last version.

* Version 0.0.21 (released 2007-05-22)

** Fix 'make distclean'.
Now src/gss_cmd.c and src/gss_cmd.h is only removed by 'make
maintainer-clean'.  Thanks to Bernd Zeimetz <bernd@bzed.de> and Russ
Allbery <rra@stanford.edu>.

** Gnulib file update.

** API and ABI modifications.
No changes since last version.

* Version 0.0.20 (released 2007-04-16)

** Gnulib file update.

** API and ABI modifications.
No changes since last version.

* Version 0.0.19 (released 2007-01-09)

** Corrected years in copyright notices.

** Fixed a 64-bit bug in asn1.c:gss_decapsulate_token().